# obs-monitors-info

./: .gitignore  CMakeLists.txt  Readme.md  main.cc  monitor_name.cc  monitor_name.h  monitor_name_win32.cc
